fixed border colors

--- a/app/styles/_components.layers.scss
+++ b/app/styles/_components.layers.scss
@@ -32,6 +32,9 @@
   opacity 0.3s cubic-bezier(0.215, 0.61, 0.355, 1),
   background-color 0.3s cubic-bezier(0.215, 0.61, 0.355, 1);
   &:hover:not(.c-layer--selected) {
+    @media only screen and (max-width: 959px) {
+      border-right-color: $color-selected-border;
+    }
     border-top-color: $color-selected-border;
     border-left-color: $color-selected-border;
     color: $color-selected-border;
@@ -80,6 +83,20 @@
 
   @include mq(960px) {
     transform: scale(0.8) translate(200px, 200px) !important;
+  }
+}
+
+@media only screen and (max-width: 959px) {
+  .evo_c-3dlayer--visited:not(.evo_c-3dlayer--selected):not(.evo_c-3dlayer--hide):not(.evo_c-3dlayer--dragging) {
+    border-right-color: $color-visited;
+
+    &:hover:not(.evo_c-3dlayer--selected) {
+      border-right-color: $color-selected-border;
+    }
+  }
+
+  .evo_c-3dlayer--dragging {
+    border-right-color: $color-selected-border;
   }
 }
 
