--- a/app/styles/_tools.breakpoints.scss
+++ b/app/styles/_tools.breakpoints.scss
@@ -2,8 +2,16 @@ $mq-tablet: 450px;
 $mq-landscape: 700px;
 $mq-desktop: 1000px;
 
+$mq-layout-change: 960px;
+
 @mixin mq($min-width) {
   @media only screen and (min-width: $min-width) {
+    @content;
+  }
+}
+
+@mixin mq-max($max-width) {
+  @media only screen and (max-width: #{$max-width - 1px}) {
     @content
   }
-};
+}
