--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -2,7 +2,7 @@
 @import "settings.colors";
 @import "tools.mixins";
 @import "tools.breakpoints";
-@import "normalize";
+@import "~normalize.css";
 @import "generic.box-sizing";
 @import "generic.reset";
 @import "generic.shared";
